--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,9 +12,9 @@
     </head>
     <body>
         {% include navigation.html %}
-
+		<div class="container">
         {{ content }}
-
+		</div>
         {% include footer.html %}
 
     </body>
