renamed to basic

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -15,8 +15,8 @@
         <li{% if page.slug == "home" %} class="active"{% endif %}>
           <a href="./">Home</a>
         </li>
-        <li{% if page.slug == "allinone" %} class="active"{% endif %}>
-          <a href="./allinone.html">All-in-One</a>
+        <li{% if page.slug == "basic" %} class="active"{% endif %}>
+          <a href="./basic.html">Basic Setup</a>
         </li>
         <li{% if page.slug == "torqueha" %} class="active"{% endif %}>
           <a href="./torqueha.html">Torque HA</a>
