added advanced setup

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -18,6 +18,9 @@
         <li{% if page.slug == "basic" %} class="active"{% endif %}>
           <a href="./basic.html">Basic Setup</a>
         </li>
+        <li{% if page.slug == "advanced" %} class="active"{% endif %}>
+          <a href="./advanced.html">Advanced Setup</a>
+        </li>
         <li{% if page.slug == "torqueha" %} class="active"{% endif %}>
           <a href="./torqueha.html">Torque HA</a>
         </li>
