updated project name

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="./" class="navbar-brand">Cluster in the Cloud</a>
+      <a href="./" class="navbar-brand">Dynamic Cluster as a Service</a>
     </div>
 
     <nav class="collapse navbar-collapse" role="navigation">
@@ -28,7 +28,7 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="https://github.com/eResearchSA/citc">
+          <a href="https://github.com/eResearchSA/dcaas">
             <i class="fa fa-github"></i>
             GitHub
           </a>
