--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
-  Cluster in the Cloud is licensed under 
-  <a href="https://github.com/eResearchSA/citc/blob/master/LICENSE">
+  Dynamic Cluster as a Service is licensed under 
+  <a href="https://github.com/eResearchSA/dcaas/blob/master/LICENSE">
     Apache License 2.0.
   </a>
   Maintained by
