--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -21,9 +21,9 @@
         <li{% if page.slug == "advanced" %} class="active"{% endif %}>
           <a href="./advanced.html">Advanced Setup</a>
         </li>
-        <li{% if page.slug == "torqueha" %} class="active"{% endif %}>
+<!--         <li{% if page.slug == "torqueha" %} class="active"{% endif %}>
           <a href="./torqueha.html">Torque HA</a>
-        </li>
+        </li> -->
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
